Bug 164129 - Changing page size/orientation when printing notes in Impress does not relayout content
Summary: Changing page size/orientation when printing notes in Impress does not relayo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2
Keywords:
Depends on:
Blocks: Print
  Show dependency treegraph
 
Reported: 2024-12-02 16:59 UTC by Gabor Kelemen (Collabora)
Modified: 2026-04-29 09:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
EXample file from Impress with lots of note text (10.93 KB, application/vnd.oasis.opendocument.presentation)
2024-12-02 16:59 UTC, Gabor Kelemen (Collabora)
Details
The Print dialog before the page size change (120.79 KB, image/png)
2024-12-02 17:00 UTC, Gabor Kelemen (Collabora)
Details
The Print dialog after the page size change to A3 (92.37 KB, image/png)
2024-12-02 17:00 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-12-02 16:59:48 UTC
Created attachment 197900 [details]
EXample file from Impress with lots of note text

This is similar to bug 161541 and bug 155218

When in Impress notes are selected to be printed and the page size is changed from the default A4, the content is not relayouted, only it is displayed on a different size paper in the preview.

This was noticed while testing the fix of bug 88226 as now it will be possible to lay out more of the notes, i.e. to a second page if there is a lot.
But then the user may decide to use a larger paper such as A3, and that won't change anything.

1. Open attached document
2. File - Print
3. On the Impress page select "Notes" as Type
4. Go back to the General page, select A3 page size
-> the content is not relayouted, it is the same amount of text in the middle of a larger sheet.

Ideally the slide area should grow and more of the note text should be layouted to the first page.

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ab60c81f77f45315ba3cfc7cae6c1d9144588663
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2024-12-02 17:00:09 UTC
Created attachment 197901 [details]
The Print dialog before the page size change
Comment 2 Gabor Kelemen (Collabora) 2024-12-02 17:00:41 UTC
Created attachment 197902 [details]
The Print dialog after the page size change to A3
Comment 3 Gabor Kelemen (Collabora) 2024-12-02 17:01:29 UTC
For the record the pending change is https://gerrit.libreoffice.org/c/core/+/177511
Comment 4 Gabor Kelemen (Collabora) 2024-12-02 17:21:12 UTC
Also it is worth noting that changing the orientation from Portrait to Landscape does not relayout either. Maybe this can be handled in the same report.
Comment 5 Commit Notification 2024-12-09 14:40:41 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f958aea556e6ea067eb8696a1dff99f3458e8c19

tdf#164129 sd: fix resizing of the notes text content

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-12-16 14:43:09 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/1de96ea1d11b154b6aa086b7aac03cec61caa292

tdf#164129 sd: fix resizing of the notes text content

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.