tdf#164129 sd: fix resizing of the notes text content

The notes text content was not resized when we changed the paper size
in the print dialog.

Change-Id: I2f610579e2ac84c298c4105a5c1235fbe62ad627
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178146
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>
(cherry picked from commit f958aea556e6ea067eb8696a1dff99f3458e8c19)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178157
Tested-by: allotropia jenkins <jenkins@allotropia.de>